Delete docs folder, set version to 0.1

--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,10 @@
 name = "CompileTraces"
 uuid = "92d184ee-bd0d-43d0-b768-a20943f3d1e3"
 authors = ["Cédric BELMANT"]
-version = "1.0.0-DEV"
+version = "0.1.0"
 
 [compat]
-julia = "1.7"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
