--- a/Project.toml
+++ b/Project.toml
@@ -1,9 +1,15 @@
 name = "CompileTraces"
 uuid = "92d184ee-bd0d-43d0-b768-a20943f3d1e3"
 authors = ["Cédric BELMANT"]
-version = "1.1.2"
+version = "1.2.0"
+
+[deps]
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+Preferences = "21216c6a-2e73-6563-6e65-726566657250"
 
 [compat]
+Pkg = "1"
+Preferences = "1"
 julia = "1.6"
 
 [extras]
