--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -18,10 +18,9 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.6'
-          - '1.7'
-          - '1.8'
-          - '1.9'
+          - 'lts'
+          - '1'
+          - 'pre'
           - 'nightly'
         os:
           - ubuntu-latest
@@ -31,7 +30,7 @@ jobs:
           - x64
     steps:
       - uses: actions/checkout@v2
-      - uses: julia-actions/setup-julia@v1
+      - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
